--- a/Java/build.gradle
+++ b/Java/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.h4nul'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2_ON_DEVELOPMENT'
 
 java {
     sourceCompatibility = '17'
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.github.wendykierp:JTransforms:3.1'
     implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'ws.schild:jave-all-deps:3.4.0'
     implementation 'org.json:json:20231013'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
