--- a/Java/build.gradle
+++ b/Java/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.h4nul'
-version = '0.0.2_ON_DEVELOPMENT'
+version = '1.0.0_Alpha'
 
 java {
     sourceCompatibility = '17'
@@ -22,7 +22,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.github.wendykierp:JTransforms:3.1'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'ws.schild:jave-all-deps:3.4.0'
