--- a/Java/build.gradle
+++ b/Java/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     implementation 'com.github.wendykierp:JTransforms:3.1'
+    implementation 'commons-cli:commons-cli:1.6.0'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'ws.schild:jave-all-deps:3.4.0'
     implementation 'org.json:json:20231013'
