--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Cache #
 **/__pycache__/
 
+# Music folder #
+music/*
+
 # Music files #
 *.fra
 *.fva
@@ -16,6 +19,11 @@
 *.mp3
 *.wav
 *.wma
+
+# RAW files #
+*.raw
+*.pcm
+*.swv
 
 # Artworks #
 *.png
