--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 ffmpeg.* filter=lfs diff=lfs merge=lfs -text
 ffprobe.* filter=lfs diff=lfs merge=lfs -text
+AppleAAC.Windows filter=lfs diff=lfs merge=lfs -text
