--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "frad"
 version = "0.0.0"
-authors = [{name = "HaמuL"}]
+authors = [{name = "HaƞuL"}]
 dependencies = [
     "numpy",
     "scipy",
